# ros2-autonomous-navigation

./: .gitignore  ARCHITECTURE.md  README.md  SYSTEM_FLOW.md  frames_2026-06-20_07.11.42.gv
docs/: CODING_STANDARDS.md  INSTALLATION.md  PROJECT_CONVENTIONS.md  PYTHON_HEADER_TEMPLATE.md  SYSTEM_ARCHITECTURE.md  USAGE.md
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/: README_ARCHITECTURE.md
src/autonav_bringup/: README.md  package.xml  setup.cfg  setup.py
src/autonav_control/: README.md  package.xml  setup.cfg  setup.py
src/autonav_costmap/: package.xml  setup.cfg  setup.py
src/autonav_description/: setup.cfg  setup.py
src/autonav_global_planner/: package.xml  setup.cfg  setup.py
src/autonav_goal_manager/: package.xml  setup.cfg  setup.py
src/autonav_local_planner/: package.xml  setup.cfg  setup.py
src/autonav_localization/: README.md  setup.cfg  setup.py
src/autonav_msgs/: CMakeLists.txt  package.xml
src/autonav_path_follower/: package.xml  setup.cfg  setup.py
src/autonav_perception/: package.xml  setup.cfg  setup.py
src/autonav_planning/: README.md  setup.cfg  setup.py
src/autonav_recovery/: package.xml  setup.cfg  setup.py
src/autonav_slam/: README.md  package.xml  setup.cfg  setup.py
src/autonav_utils/: package.xml  setup.cfg  setup.py
src/dynamic_obstacle_pkg/: setup.py  (+2 more)
src/kitti_eval_pkg/: package.xml  setup.cfg  setup.py
src/kitti_eval_pkg/kitti_eval_pkg/: kitti_evaluator.py
src/research_report_pkg/: package.xml  setup.cfg  setup.py
src/research_report_pkg/research_report_pkg/: report_generator.py
(+154 files in other folders)
